handle contentType in e2e detox tests, remove excess padding/margins, SafeAreaView

--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -37,22 +37,20 @@ function ForgotPasswordScreen(props) {
 
   return (
     <KeyboardAwareScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
-      <View style={styles.formContainer}>
-        <Text style={styles.errorText}>{error}</Text>
-        <Text style={styles.successText}>{success}</Text>
-        <Form initialValues={{ email: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
-          <FormField
-            name="email"
-            label="Email"
-            placeholder="Enter email"
-            onSubmitEditing={() => formRef?.current?.submitForm()}
-            autoCapitalize="none"
-            keyboardType="email-address"
-            textContentType="username"
-          />
-          <FormButton title={'Reset Password'} />
-        </Form>
-      </View>
+      {!!error && <Text style={styles.errorText}>{error}</Text>}
+      {!!success && <Text style={styles.successText}>{success}</Text>}
+      <Form initialValues={{ email: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
+        <FormField
+          name="email"
+          label="Email"
+          placeholder="Enter email"
+          onSubmitEditing={() => formRef?.current?.submitForm()}
+          autoCapitalize="none"
+          keyboardType="email-address"
+          textContentType="username"
+        />
+        <FormButton title={'Reset Password'} />
+      </Form>
     </KeyboardAwareScrollView>
   );
 }
