--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -48,53 +48,51 @@ function ChangePasswordScreen(props) {
 
   return (
     <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="changePasswordScreen" keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
-      <View style={styles.formContainer}>
-        <Text style={styles.errorText}>{error}</Text>
-        <Text style={styles.successText}>{success}</Text>
-        <Form
-          initialValues={{ currentPassword: '', confirmPassword: '', newPassword: '' }}
-          validationSchema={validationSchema}
-          onSubmit={onSubmit}
-          ref={formRef}>
-          <FormField
-            ref={currentPasswordRef}
-            testID="currentPasswordInput"
-            name="currentPassword"
-            label="Current Password"
-            placeholder="Enter current password"
-            autoCapitalize="none"
-            autoCorrect={false}
-            secureTextEntry={true}
-            onSubmitEditing={() => newPasswordRef?.current?.focus()}
-            textContentType="password"
-          />
-          <FormField
-            ref={newPasswordRef}
-            testID="newPasswordInput"
-            name="newPassword"
-            label="New Password"
-            placeholder="Enter new password"
-            autoCapitalize="none"
-            autoCorrect={false}
-            secureTextEntry={true}
-            onSubmitEditing={() => confirmPasswordRef?.current?.focus()}
-            textContentType="password"
-          />
-          <FormField
-            ref={confirmPasswordRef}
-            testID="confirmPasswordInput"
-            name="confirmPassword"
-            label="Confirm Password"
-            placeholder="Enter new password"
-            autoCapitalize="none"
-            autoCorrect={false}
-            secureTextEntry={true}
-            onSubmitEditing={() => formRef?.current?.submitForm()}
-            textContentType="password"
-          />
-          <FormButton testID="changePasswordSubmitButton" title={'Change Password'} />
-        </Form>
-      </View>
+      {!!error && <Text style={styles.errorText}>{error}</Text>}
+      {!!success && <Text style={styles.successText}>{success}</Text>}
+      <Form
+        initialValues={{ currentPassword: '', confirmPassword: '', newPassword: '' }}
+        validationSchema={validationSchema}
+        onSubmit={onSubmit}
+        ref={formRef}>
+        <FormField
+          ref={currentPasswordRef}
+          testID="currentPasswordInput"
+          name="currentPassword"
+          label="Current Password"
+          placeholder="Enter current password"
+          autoCapitalize="none"
+          autoCorrect={false}
+          secureTextEntry={true}
+          onSubmitEditing={() => newPasswordRef?.current?.focus()}
+          textContentType="password"
+        />
+        <FormField
+          ref={newPasswordRef}
+          testID="newPasswordInput"
+          name="newPassword"
+          label="New Password"
+          placeholder="Enter new password"
+          autoCapitalize="none"
+          autoCorrect={false}
+          secureTextEntry={true}
+          onSubmitEditing={() => confirmPasswordRef?.current?.focus()}
+          textContentType="password"
+        />
+        <FormField
+          ref={confirmPasswordRef}
+          testID="confirmPasswordInput"
+          name="confirmPassword"
+          label="Confirm Password"
+          placeholder="Enter new password"
+          autoCapitalize="none"
+          autoCorrect={false}
+          secureTextEntry={true}
+          onSubmitEditing={() => formRef?.current?.submitForm()}
+          textContentType="password"
+        />
+        <FormButton testID="changePasswordSubmitButton" title={'Change Password'} />
+      </Form>
     </KeyboardAwareScrollView>
   );
 }
