--- a/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
@@ -4,6 +4,9 @@ import { Metrics, ApplicationStyles, Colors } from '../../shared/themes/';
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
+  mainContainer: {
+    backgroundColor: Colors.jhipsterBlue,
+  },
   welcomeText: {
     textAlign: 'center',
     fontSize: 20,
