--- a/generators/app/templates/App.js.ejs
+++ b/generators/app/templates/App.js.ejs
@@ -1,10 +1,16 @@
 import * as React from 'react';
+import { SafeAreaView, StyleSheet, } from 'react-native';
 import { Provider } from 'react-redux';
 import createStore from './app/shared/reducers';
 import * as SplashScreen from 'expo-splash-screen';
 
 import NavContainer from './app/navigation/nav-container';
 
+const styles = StyleSheet.create({
+  safeAreaView: {
+    flex: 1
+  }
+});
 const store = createStore();
 
 export default function App() {
@@ -19,8 +25,10 @@ export default function App() {
   }, [displayApp, setDisplayApp]);
 
   return displayApp ? (
-    <Provider store={store}>
-      <NavContainer />
-    </Provider>
+    <SafeAreaView style={styles.safeAreaView}>
+      <Provider store={store}>
+        <NavContainer />
+      </Provider>
+    </SafeAreaView>
   ) : null;
 }
