--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -7,14 +7,9 @@ import Colors from './colors'
 
 const ApplicationStyles = {
   screen: {
-    mainContainer: {
-      flex: 1,
-      backgroundColor: Colors.jhipsterBlue
-    },
     container: {
       flex: 1,
-      margin: 20,
-      paddingTop: Metrics.baseMargin,
+      padding: 20,
       backgroundColor: Colors.transparent
     },
     section: {
@@ -60,10 +55,6 @@ const ApplicationStyles = {
       color: 'white',
       alignSelf: 'center',
     },
-    formContainer: {
-      padding: 8,
-      flex: 1,
-    },
     errorText: {
       color: 'red',
       fontSize: 14,
@@ -72,6 +63,13 @@ const ApplicationStyles = {
       color: 'green',
       fontSize: 14,
     },
+  },
+  entity: {
+    entityContainer: {
+      flex: 1,
+      backgroundColor: Colors.transparent,
+    },
+    entityScrollView: { padding: 20, marginBottom: 10 },
   },
   darkLabelContainer: {
     padding: Metrics.smallMargin,
