--- a/generators/entity/templates/entity-edit-screen-style.js.ejs
+++ b/generators/entity/templates/entity-edit-screen-style.js.ejs
@@ -4,10 +4,7 @@ import { ApplicationStyles } from '../../../shared/themes'
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
-  container: {
-    flex: 1,
-    padding: 20
-  },
+  ...ApplicationStyles.entity,
   buttonText: {
     fontSize: 18,
     color: 'white',
