--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -48,7 +48,6 @@ const ApplicationStyles = {
       borderRadius: 8,
       alignSelf: 'stretch',
       justifyContent: 'center',
-      marginBottom: 20,
     },
     buttonText: {
       fontSize: 18,
@@ -69,7 +68,8 @@ const ApplicationStyles = {
       flex: 1,
       backgroundColor: Colors.transparent,
     },
-    entityScrollView: { padding: 20, marginBottom: 10 },
+    entityScrollView: { padding: 20 },
+    entityButtons: {marginBottom: 20},
   },
   darkLabelContainer: {
     padding: Metrics.smallMargin,
