--- a/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
@@ -40,7 +40,7 @@ export default React.forwardRef((props, ref) => {
         {...otherProps}
       />
       {/* if there's an error, render it */}
-      <Text style={styles.textError}>{error && error.message}</Text>
+      {!!error && !!error.message && <Text style={styles.textError}>{error && error.message}</Text>}
     </View>
   );
 });
