--- a/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
@@ -29,7 +29,7 @@ export default React.forwardRef((props, ref) => {
       />
 
       {/* if there's an error, render it */}
-      <Text style={styles.textError}>{error && error.message}</Text>
+      {!!error && !!error.message && <Text style={styles.textError}>{error && error.message}</Text>}
     </View>
   );
 });
