--- a/generators/app/templates/app/shared/components/form/inputs/jhi-switch-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-switch-input.js.ejs
@@ -13,7 +13,7 @@ export default React.forwardRef((props, ref) => {
       <Switch style={[styles.input]} {...otherProps} />
 
       {/* if there's an error, render it */}
-      <Text style={styles.textError}>{error && error.message}</Text>
+      {!!error && !!error.message && <Text style={styles.textError}>{error && error.message}</Text>}
     </View>
   );
 });
