--- a/generators/entity/templates/entity-detail-screen-style.js.ejs
+++ b/generators/entity/templates/entity-detail-screen-style.js.ejs
@@ -4,6 +4,7 @@ import { ApplicationStyles } from '../../../shared/themes'
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
+  ...ApplicationStyles.entity,
   label: {
     fontWeight: 'bold'
   },
