--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -63,16 +63,18 @@ function <%= context.entityNameCapitalized %>EntityDetailScreen(props) {
         <Text testID='<%= field.fieldName %>'>{props.<%= context.entityInstance %>.<%= field.fieldName %>}</Text>
       <%_ } _%>
       <%_ }) _%>
-      <RoundedButton text="Edit" onPress={() => navigation.navigate('<%= context.entityNameCapitalized %>EntityEdit', { entityId: props.<%= context.entityInstance %>.id })} accessibilityLabel={'<%= context.entityNameCapitalized %> Edit Button'} />
-      <RoundedButton text="Delete" onPress={() => setDeleteModalVisible(true)} accessibilityLabel={'<%= context.entityNameCapitalized %> Delete Button'} />
-      {deleteModalVisible && (
-        <<%= context.entityNameCapitalized %>EntityDeleteModal
-          navigation={navigation}
-          visible={deleteModalVisible}
-          setVisible={setDeleteModalVisible}
-          entity={props.<%= context.entityInstance %>}
-        />
-      )}
+      <View style={styles.entityButtons}>
+        <RoundedButton text="Edit" onPress={() => navigation.navigate('<%= context.entityNameCapitalized %>EntityEdit', { entityId: props.<%= context.entityInstance %>.id })} accessibilityLabel={'<%= context.entityNameCapitalized %> Edit Button'} />
+        <RoundedButton text="Delete" onPress={() => setDeleteModalVisible(true)} accessibilityLabel={'<%= context.entityNameCapitalized %> Delete Button'} />
+        {deleteModalVisible && (
+          <<%= context.entityNameCapitalized %>EntityDeleteModal
+            navigation={navigation}
+            visible={deleteModalVisible}
+            setVisible={setDeleteModalVisible}
+            entity={props.<%= context.entityInstance %>}
+          />
+        )}
+      </View>
     </ScrollView>
   );
 }
