--- a/generators/entity/templates/entity-edit-screen.js.ejs
+++ b/generators/entity/templates/entity-edit-screen.js.ejs
@@ -140,10 +140,11 @@ const onSubmit = (data) => update<%= context.entityNameCapitalized %>(formValueT
   return (
     <View style={styles.entityContainer}>
       <KeyboardAwareScrollView
+        enableResetScrollToCoords={false}
         testID="<%= context.entityInstance %>EditScrollView"
         keyboardShouldPersistTaps="handled"
         keyboardDismissMode="on-drag"
-        style={styles.entityScrollView}>
+        contentContainerStyle={styles.entityScrollView}>
         {!!error && <Text style={styles.errorText}>{error}</Text>}
         {formValue && (
           <Form initialValues={formValue} <%_ if (context.validation) { _%>validationSchema={validationSchema} <%_ } _%>onSubmit={onSubmit} ref={formRef}>
