fixes date formatting, revert scrollTo, remove SafeAreaView, update detox conf

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -3,12 +3,16 @@
     "ios.sim.debug": {
       "binaryPath": "e2e/Exponent.app",
       "type": "ios.simulator",
-      "name": "iPhone 11"
+      "device": {
+        "type": "iPhone 11"
+      }
     },
     "ios.sim.release": {
       "binaryPath": "e2e/Exponent.app",
       "type": "ios.simulator",
-      "name": "iPhone 11"
+      "device": {
+        "type": "iPhone 11"
+      }
     },
     "android.emu.debug": {
       "binaryPath": "e2e/Exponent.app",
