--- a/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
@@ -28,6 +28,9 @@ export default React.forwardRef((props, ref) => {
     // date values can't be strings
     values[name] = new Date(values[name]);
   }
+  if (inputType === 'boolean') {
+    values[name] = Boolean(values[name]);
+  }
   if (inputType === 'number' && (typeof values[name]).toLowerCase() === 'number') {
     // number values have to be strings
     values[name] = String(values[name]);
