--- a/generators/app/templates/app/shared/util/date-transforms.js.ejs
+++ b/generators/app/templates/app/shared/util/date-transforms.js.ejs
@@ -1,15 +1,25 @@
-export const jsDateToLocalDate = (date) => {
-  if (!date || !date.getYear) {
-    return ''
+export const convertLocalDateToString = (date) => {
+  return !date || !date.getYear
+    ? ''
+    : ('0' + (date.getMonth() + 1).toString()).substr(-2) +
+        '/' +
+        ('0' + date.getDate().toString()).substr(-2) +
+        '/' +
+        date.getFullYear().toString().substr(2);
+};
+
+export const convertDateTimeFromServer = (date) => {
+  if (date) {
+    return new Date(date);
+  } else {
+    return null;
   }
-  return ('0' + (date.getMonth() + 1).toString()).substr(-2) + '/' + ('0' + date.getDate().toString()).substr(-2) + '/' + (date.getFullYear().toString()).substr(2)
-}
-export const localDateToJsDate = (localDate) => {
-  const split = localDate.split('-')
-  const year = split[0]
-  const month = split[1] - 1
-  const day = split[2]
-  const d = new Date()
-  d.setUTCFullYear(year, month, day)
-  return d
-}
+};
+
+export const convertLocalDateFromServer = (date) => {
+  if (date) {
+    var dateString = date.split('-');
+    return new Date(dateString[0], dateString[1] - 1, dateString[2]);
+  }
+  return null;
+};
