--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -57,18 +57,10 @@ const closeKeyboard = async (componentId = null) => {
 };
 
 const scrollTo = async (fieldId, listId, size = 0.15, direction = 'up', speed = 'slow') => {
-  let attempts = 0;
-  if (device.getPlatform() === 'ios') {
-    let attributes = await element(by.id(fieldId)).getAttributes();
-    while (!attributes.visible && attempts < 20) {
-      await element(by.id(listId)).swipe(direction, speed, size);
-      attributes = await element(by.id(fieldId)).getAttributes();
-      attempts += 1;
-    }
-    if (attempts >= 20) {
-      throw `Did not find after attempting to scroll ${listId} to element ${fieldID}`;
-    }
-  }
+  await waitFor(element(by.id(fieldId)))
+    .toBeVisible()
+    .whileElement(by.type('ABI40_0_0RCTCustomScrollView').withAncestor(by.id(listId)))
+    .scroll(600, 'down');
 };
 
 const tapFirstElementByLabel = async (label) => {
