lint and prettier

--- a/generators/app/templates/app/modules/login/login-screen.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.js.ejs
@@ -1,5 +1,5 @@
 import React, { createRef } from 'react';
-import { Text, View } from 'react-native';
+import { Text } from 'react-native';
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
 import { connect } from 'react-redux';
 import * as Yup from 'yup';
