--- a/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
+++ b/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
@@ -1,36 +1,40 @@
-import { Image, Platform, View } from 'react-native';
+import { Image, Platform, View, StyleSheet } from 'react-native';
 import TouchableItem from '@react-navigation/drawer/src/views/TouchableItem';
 import { Images } from '../../shared/themes';
 import * as React from 'react';
 import { toggleDrawer } from '../nav-ref';
+
+const styles = StyleSheet.create({
+  wrapper: {
+    flexDirection: 'row',
+  },
+  touchableItem: {
+    marginHorizontal: 11,
+  },
+  image: {
+    height: 24,
+    width: 24,
+    margin: 3,
+    resizeMode: 'contain',
+  },
+});
 
 export const DrawerButton = (props) => {
   // const dimensions = useWindowDimensions();
   // hide the menu button since it's permanent on large screens
   const largeScreen = false; //dimensions.width >= 768;
   return largeScreen ? null : (
-    <View style={{ flexDirection: 'row' }}>
+    <View style={styles.wrapper}>
       <TouchableItem
         onPress={toggleDrawer}
         accessibilityLabel={'Menu Button'}
-        style={{
-          marginHorizontal: 11,
-        }}
+        style={styles.touchableItem}
         hitSlop={Platform.select({
           ios: undefined,
           default: { top: 16, right: 16, bottom: 16, left: 16 },
         })}>
         {/* Button Image */}
-        <Image
-          source={Images.toggleDrawerIcon}
-          accessibilityLabel={'Menu Button'}
-          style={{
-            height: 24,
-            width: 24,
-            margin: 3,
-            resizeMode: 'contain',
-          }}
-        />
+        <Image source={Images.toggleDrawerIcon} accessibilityLabel={'Menu Button'} style={styles.image} />
       </TouchableItem>
     </View>
   );
