--- a/generators/app/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/app/templates/app/shared/reducers/create-store.js.ejs
@@ -1,4 +1,4 @@
-import { createStore, applyMiddleware, compose } from 'redux'
+import { createStore, applyMiddleware } from 'redux'
 import createSagaMiddleware from 'redux-saga'
 import { composeWithDevTools } from 'redux-devtools-extension/developmentOnly';
 
